# zambahola-one-agent

./: .gitattributes  .gitignore  .prettierignore  AGENTS.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml
.cursor/: mcp.json.example
config/: README.md  bridge.env.example  directional-live.env  exchange-demo.env.example  max-accuracy.env  omni-train.env  phase2-hybrid.env  phase2-learn-trade.env  phase2-live.env  phase2-signals.env  phase3-intensive.env  phase4-hit-recover.env  phase5-night-train.env  phase5-ready.env
docs/: COMMANDS.md  DEEP_RESEARCH_2026.md  INTEGRATIONS.md  LEARNING_DEVELOPMENT_PATH.md  LOCAL_MAX_ACCURACY.md  PREDICTION_ACCURACY_ROADMAP.md  REPOSITORY_STATUS.md  ROADMAP.md  VERIFICATION_REPORT.json  ZAMBAHOLA_ONE_AGENT_V0_REPORT.md  ZAMBAHOLA_V02_UPGRADE.md  ZAMBAHOLA_V04_DEEP.md  (+3 more)
zambahola-beta/: .gitignore  README.md  STRATEGY.md  collect.ps1  pyproject.toml  start.ps1  watchdog.ps1
zambahola-beta/src/zambahola_beta/: __init__.py  allocation.py  altdata.py  backtest.py  cli.py  config.py  cross.py  data.py  executor.py  features.py  labels.py  ledger.py  maker_backtest.py  micro_features.py  model.py  pipeline.py  recorder.py  scan_backtest.py  search.py  strategy.py  universe.py  webapp.py
zambahola-beta/tests/: conftest.py  test_allocation.py  test_backtest.py  test_cross.py  test_data.py  test_executor.py  test_features.py  test_labels.py  test_ledger.py  test_maker.py  test_micro.py  test_model.py  test_pipeline.py  test_recorder.py  test_scan_backtest.py  test_search.py  test_strategy.py  test_universe.py  test_webapp.py
(+317 files in other folders)
