[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "zambahola-beta"
version = "0.1.0"
description = "ZAMBAHOLA BETA — offline, validated ML pipeline for BTC direction (data -> features -> labels -> model -> cost-aware backtest)"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "pyarrow>=14",
  "scikit-learn>=1.4",
  "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[project.scripts]
zambahola-beta = "zambahola_beta.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
